--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     </div>
 
 
-    <img src="/Images/mobimg.jpg" alt="" class="md:hidden">
+    <img src="./Images/mobimg.jpg" alt="" class="md:hidden">
 
     <script>
         document.getElementById('yesButton').addEventListener('click', function () {
