--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <section id="section1" class="relative py-16 px-6 h-[650px] text-gray-800">
                 <div class="absolute inset-0 bg-cover bg-center bg-fixed"
-                    style="background-image: url('/Images/header.jpg');">
+                    style="background-image: url('./Images/header.jpg');">
                     <div class="absolute inset-0"
                         style="background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);">
                     </div>
@@ -142,7 +142,7 @@
                     <!-- Content Container -->
                     <div class="flex flex-col md:flex-row items-center gap-8 bg-gray-100 p-6 rounded-lg shadow-md">
                         <!-- Image Section -->
-                        <img src="/Images/section2Img.jpg" alt="Fantasy Cricket"
+                        <img src="./Images/section2Img.jpg" alt="Fantasy Cricket"
                             class="rounded-3xl object-cover max-w-full w-full md:w-1/2 h-72 md:h-[350px]">
 
                         <!-- Text Content -->
@@ -200,7 +200,7 @@
                             <p class="text-sm text-gray-600 mb-4">
                                 Choose an upcoming match from your favourite sport.
                             </p>
-                            <img src="/Images/select games.webp" alt="Step 1 Image" class="rounded-lg w-full">
+                            <img src="./Images/select games.webp" alt="Step 1 Image" class="rounded-lg w-full">
                         </div>
 
                         <!-- Step 2 -->
@@ -213,7 +213,7 @@
                             <p class="text-sm text-gray-600 mb-4">
                                 Create your team with the best players using your skills.
                             </p>
-                            <img src="/Images/create team.avif" alt="Step 2 Image" class="rounded-lg w-full">
+                            <img src="./Images/create team.avif" alt="Step 2 Image" class="rounded-lg w-full">
                         </div>
 
                         <!-- Step 3 -->
@@ -226,7 +226,7 @@
                             <p class="text-sm text-gray-600 mb-4">
                                 From a wide range of contests, choose the one you want to join.
                             </p>
-                            <img src="/Images/winprize.avif" alt="Step 3 Image" class="rounded-lg w-full">
+                            <img src="./Images/winprize.avif" alt="Step 3 Image" class="rounded-lg w-full">
                         </div>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
                     <!-- Content Container -->
                     <div class="flex flex-col md:flex-row items-center gap-8 bg-gray-100 p-8 rounded-lg shadow-lg">
                         <!-- Image Section -->
-                        <img src="/Images/helmet.webp" alt="Fantasy Cricket"
+                        <img src="./Images/helmet.webp" alt="Fantasy Cricket"
                             class="rounded-3xl object-cover max-w-full w-full md:w-1/2 h-72 md:h-[350px]">
 
                         <!-- Text Content -->
@@ -284,7 +284,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                         <!-- Testimonial 1 -->
                         <div class="flex items-center gap-4 bg-gray-100 p-6 rounded-lg shadow-md">
-                            <img src="/Images/profile.png" alt="John Doe" class="w-16 h-16 rounded-full object-cover">
+                            <img src="./Images/profile.png" alt="John Doe" class="w-16 h-16 rounded-full object-cover">
                             <div>
                                 <h4 class="text-lg font-semibold">John Doe</h4>
                                 <p class="text-sm text-gray-500">Software Engineer</p>
@@ -297,7 +297,7 @@
 
                         <!-- Testimonial 2 -->
                         <div class="flex items-center gap-4 bg-gray-100 p-6 rounded-lg shadow-md">
-                            <img src="/Images/profile.png" alt="Jane Smith" class="w-16 h-16 rounded-full object-cover">
+                            <img src="./Images/profile.png" alt="Jane Smith" class="w-16 h-16 rounded-full object-cover">
                             <div>
                                 <h4 class="text-lg font-semibold">Jane Smith</h4>
                                 <p class="text-sm text-gray-500">Marketing Specialist</p>
@@ -311,7 +311,7 @@
 
                         <!-- Testimonial 3 -->
                         <div class="flex items-center gap-4 bg-gray-100 p-6 rounded-lg shadow-md">
-                            <img src="/Images/profile.png" alt="John Doe" class="w-16 h-16 rounded-full object-cover">
+                            <img src="./Images/profile.png" alt="John Doe" class="w-16 h-16 rounded-full object-cover">
                             <div>
                                 <h4 class="text-lg font-semibold">John Doe</h4>
                                 <p class="text-sm text-gray-500">Software Engineer</p>
@@ -324,7 +324,7 @@
 
                         <!-- Testimonial 4 -->
                         <div class="flex items-center gap-4 bg-gray-100 p-6 rounded-lg shadow-md">
-                            <img src="/Images/profile.png" alt="Jane Smith" class="w-16 h-16 rounded-full object-cover">
+                            <img src="./Images/profile.png" alt="Jane Smith" class="w-16 h-16 rounded-full object-cover">
                             <div>
                                 <h4 class="text-lg font-semibold">Jane Smith</h4>
                                 <p class="text-sm text-gray-500">Marketing Specialist</p>
