--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Popup</title>
+    <title>Ganesh Book Exchage</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body.blur {
