--- a/index.html
+++ b/index.html
@@ -97,21 +97,20 @@
         <div id="mainContent" class="">
             <header class="fixed backdrop-blur-xl top-0 w-full shadow-md py-4 z-50">
                 <nav class="flex justify-center space-x-8 text-lg font-medium">
-                    <a href="#section1" class="nav-link text-gray-100 hover:text-teal-200">Home</a>
-                    <a href="#section2" class="nav-link text-gray-100 hover:text-teal-200">Fantasy Journey</a>
-                    <a href="#section3" class="nav-link text-gray-100 hover:text-teal-200">How to Play</a>
-                    <a href="#section4" class="nav-link text-gray-100 hover:text-teal-200">About Us</a>
-                    <a href="#section5" class="nav-link text-gray-100 hover:text-teal-200">Testimonials</a>
-                    <a href="#section6" class="nav-link text-gray-100 hover:text-teal-200">FAQs</a>
+                    <a href="#section1" class="nav-link text-gray-400 hover:text-teal-300">Home</a>
+                    <a href="#section2" class="nav-link text-gray-400 hover:text-teal-300">Fantasy Journey</a>
+                    <a href="#section3" class="nav-link text-gray-400 hover:text-teal-300">How to Play</a>
+                    <a href="#section4" class="nav-link text-gray-400 hover:text-teal-300">About Us</a>
+                    <a href="#section5" class="nav-link text-gray-400 hover:text-teal-300">Testimonials</a>
+                    <a href="#section6" class="nav-link text-gray-400 hover:text-teal-300">FAQs</a>
                 </nav>
             </header>
 
 
             <section id="section1" class="relative py-16 px-6 h-[650px] text-gray-800">
-                <div class="absolute inset-0 bg-cover bg-center bg-fixed"
-                    style="background-image: url('./Images/header.jpg');">
+                <div class="absolute inset-0 bg-cover  bg-fixed" style="background-image: url('./Images/header.jpg');">
                     <div class="absolute inset-0"
-                        style="background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.8) 100%);">
+                        style="background: linear-gradient(to bottom, rgb(21 21 21 / 56%) 0%, rgb(0 0 0 / 80%) 100%);">
                     </div>
                 </div>
                 <div
@@ -124,7 +123,7 @@
                     <div class="flex gap-4">
                         <input type="text" placeholder="Enter Mobile Number"
                             class="h-[40px] px-[16px] py-[10px] rounded-[40px]  text-black">
-                        <button class="p-[10px] rounded-[40px]  text-black bg-[#6CF58F] text-black">Download
+                        <button class="p-[10px] px-[12px] rounded-[40px]  text-black bg-[#6CF58F] text-black">Download
                             App</button>
                     </div>
                 </div>
@@ -213,7 +212,7 @@
                             <p class="text-sm text-gray-600 mb-4">
                                 Create your team with the best players using your skills.
                             </p>
-                            <img src="./Images/create team.avif" alt="Step 2 Image" class="rounded-lg w-full">
+                            <img src="./Images/create team.jpg" alt="Step 2 Image" class="rounded-lg w-full">
                         </div>
 
                         <!-- Step 3 -->
@@ -226,7 +225,7 @@
                             <p class="text-sm text-gray-600 mb-4">
                                 From a wide range of contests, choose the one you want to join.
                             </p>
-                            <img src="./Images/winprize.avif" alt="Step 3 Image" class="rounded-lg w-full">
+                            <img src="./Images/winprize.jpg" alt="Step 3 Image" class="rounded-lg w-full">
                         </div>
                     </div>
                 </div>
@@ -297,7 +296,8 @@
 
                         <!-- Testimonial 2 -->
                         <div class="flex items-center gap-4 bg-gray-100 p-6 rounded-lg shadow-md">
-                            <img src="./Images/profile.png" alt="Jane Smith" class="w-16 h-16 rounded-full object-cover">
+                            <img src="./Images/profile.png" alt="Jane Smith"
+                                class="w-16 h-16 rounded-full object-cover">
                             <div>
                                 <h4 class="text-lg font-semibold">Jane Smith</h4>
                                 <p class="text-sm text-gray-500">Marketing Specialist</p>
@@ -324,7 +324,8 @@
 
                         <!-- Testimonial 4 -->
                         <div class="flex items-center gap-4 bg-gray-100 p-6 rounded-lg shadow-md">
-                            <img src="./Images/profile.png" alt="Jane Smith" class="w-16 h-16 rounded-full object-cover">
+                            <img src="./Images/profile.png" alt="Jane Smith"
+                                class="w-16 h-16 rounded-full object-cover">
                             <div>
                                 <h4 class="text-lg font-semibold">Jane Smith</h4>
                                 <p class="text-sm text-gray-500">Marketing Specialist</p>
@@ -456,22 +457,25 @@
     </div>
 
 
-    <img src="./Images/mobimg.jpg" alt="" class="md:hidden">
+ 
+    <div>
+        <img src="./Images/mobimg.jpg" alt="" class="md:hidden h-[100vh]">
+    </div>
 
     <script>
         document.getElementById('yesButton').addEventListener('click', function () {
             if (window.innerWidth >= 768) { // Only for md and above
                 document.getElementById('popup').style.display = 'none';
                 document.getElementById('mainContent').classList.remove('hidden');
-                setTimeout(function () {
-                    window.location.href = 'https://wa.me/9548538596';
-                }, 7000);
+                // setTimeout(function () {
+                //     window.location.href = 'https://wa.me/';
+                // }, 7000);
             }
         });
         document.querySelector('.md\\:hidden').addEventListener('click', function () {
-            if (window.innerWidth < 768) { // Only for mobile
-                window.location.href = 'https://wa.me/9548538596';
-            }
+            // if (window.innerWidth < 768) { // Only for mobile
+            //     window.location.href = 'https://wa.me/';
+            // }
         });
 
         document.getElementById('noButton').addEventListener('click', function () {
