--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
  
     <div>
-        <img src="./Images/mobimg.jpg" alt="" class="md:hidden h-[100vh]">
+        <img src="./Images/mobimg.jpg" alt="" class="md:hidden h-fit">
     </div>
 
     <script>
