--- a/index.html
+++ b/index.html
@@ -458,9 +458,7 @@
 
 
  
-    <div>
-        <img src="./Images/mobimg.jpg" alt="" class="md:hidden h-fit">
-    </div>
+    <img src="./Images/mobimg.jpg" alt="" class="md:hidden">
 
     <script>
         document.getElementById('yesButton').addEventListener('click', function () {
